kubernetes/batch-schedule/kueue/02kueue-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    control-plane: controller-manager
  name: kueue-system
